--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,8 @@
     <title>Hello Coursera</title>
 </head>
 <body>
-    <h1>Hello Coursera</h1>
+    <h1>Hello Coursera!</h1>
+    <p>Happy that I made it.</p>
     
 </body>
 </html>
